Fix title size on small-ish screens

--- a/src/assets/css/header.scss
+++ b/src/assets/css/header.scss
@@ -58,7 +58,6 @@
   width: 70%;
 
   @include respond-to(m-height) {
-    font-size: 44px;
     width: 90%;
   }
 
